Fix KO.binding in Edit-Recipe view to submit only existing input of nullable fields. Add a ribbon container for proper alignment of Ribbons in Recipe Details View. Fix button-with-icon mixin to create all btns with uppercase letters and 1.2rem default font size. Change ExistingIngredient check logic to compare ingredients also by their existing notes. Add length validation message for notes (of recipe ingredients)

--- a/CookTheWeek.Web/scss/components/_buttons.scss
+++ b/CookTheWeek.Web/scss/components/_buttons.scss
@@ -155,17 +155,6 @@ li.user-btn {
     
 }
 
-.save-button, 
-.browse-recipes-btn, 
-.shopping-list-btn, 
-.edit-button, 
-.delete-button, 
-.add-recipe-button,
-.mealplan-details-btn,
-.edit-recipe-btn{
-    text-transform: uppercase;
-}
-
 .add-recipe-button, .edit-recipe-btn {
     @include button-with-icon-and-text-cenetered(10rem);
     @extend .btn-secondary;
@@ -198,7 +187,7 @@ li.user-btn {
 }
 
 .user-mealplans-btn {
-    @include button-with-icon-and-text-cenetered(10rem);
+    @include button-with-icon-and-text-cenetered(10rem, 1.2rem);
     @extend .btn-danger;
 }
 .signup-button {
